--- a/analysis_assistant_system/app/build.gradle
+++ b/analysis_assistant_system/app/build.gradle
@@ -47,4 +47,10 @@ dependencies {
     //components
     implementation 'com.github.arimorty:floatingsearchview:2.1.1'
     implementation 'q.rorbin:badgeview:1.1.3'
+    implementation 'com.github.baoyachi:StepView:1.9'
+
+    //qrcode
+    implementation 'com.sonnyjack.permission:PermissionUtils:0.1.0'
+    implementation 'com.google.zxing:core:3.3.3'
+    implementation project(path: ':qrcode')
 }
