--- a/analysis_assistant_system/app/build.gradle
+++ b/analysis_assistant_system/app/build.gradle
@@ -48,6 +48,7 @@ dependencies {
     implementation 'com.github.arimorty:floatingsearchview:2.1.1'
     implementation 'q.rorbin:badgeview:1.1.3'
     implementation 'com.github.baoyachi:StepView:1.9'
+    implementation project(path: ':selector')
 
     //qrcode
     implementation 'com.sonnyjack.permission:PermissionUtils:0.1.0'
