--- a/analysis_assistant_system/app/src/main/AndroidManifest.xml
+++ b/analysis_assistant_system/app/src/main/AndroidManifest.xml
@@ -41,6 +41,26 @@
             </intent-filter>
         </activity>
 
+        <activity
+            android:name=".LoginActivity"
+            android:screenOrientation="portrait">
+        </activity>
+        <activity
+            android:name=".GestureActivity"
+            android:screenOrientation="portrait">
+        </activity>
+        <activity
+            android:name=".gesture.GesturePwdSettingActivity"
+            android:screenOrientation="portrait">
+        </activity>
+        <activity
+            android:name=".gesture.GesturePwdResetActivity"
+            android:screenOrientation="portrait">
+        </activity>
+        <activity
+            android:name=".gesture.GesturePwdCheckActivity"
+            android:screenOrientation="portrait">
+        </activity>
 
     </application>
 
