--- a/analysis_assistant_system/app/build.gradle
+++ b/analysis_assistant_system/app/build.gradle
@@ -50,9 +50,10 @@ dependencies {
     implementation 'com.github.baoyachi:StepView:1.9'
     implementation project(path: ':selector')
     implementation 'com.github.florent37:materialtextfield:1.0.7'
-
     //qrcode
     implementation 'com.sonnyjack.permission:PermissionUtils:0.1.0'
     implementation 'com.google.zxing:core:3.3.3'
     implementation project(path: ':qrcode')
+    //arcgis
+    //implementation 'com.esri.arcgisruntime:arcgis-android:100.5.0'
 }
