--- a/analysis_assistant_system/app/build.gradle
+++ b/analysis_assistant_system/app/build.gradle
@@ -5,7 +5,7 @@ android {
     buildToolsVersion "29.0.0"
     defaultConfig {
         applicationId "com.jian.system"
-        minSdkVersion 15
+        minSdkVersion 19
         targetSdkVersion 29
         versionCode 1
         versionName "1.0"
@@ -55,5 +55,5 @@ dependencies {
     implementation 'com.google.zxing:core:3.3.3'
     implementation project(path: ':qrcode')
     //arcgis
-    //implementation 'com.esri.arcgisruntime:arcgis-android:100.5.0'
+    implementation 'com.esri.arcgisruntime:arcgis-android:100.5.0'
 }
