--- a/analysis_assistant_system/qrcode/build.gradle
+++ b/analysis_assistant_system/qrcode/build.gradle
@@ -1,12 +1,12 @@
 apply plugin: 'com.android.library'
 
 android {
-    compileSdkVersion 27
-    buildToolsVersion "27.0.3"
+    compileSdkVersion 29
+    buildToolsVersion "29.0.0"
 
     defaultConfig {
-        minSdkVersion 14
-        targetSdkVersion 27
+        minSdkVersion 19
+        targetSdkVersion 29
         versionCode 2
         versionName "0.1.1"
     }
@@ -24,7 +24,7 @@ android {
 
 dependencies {
     api fileTree(include: ['*.jar'], dir: 'libs')
-    api "com.android.support:appcompat-v7:27.0.1"
+    implementation 'androidx.appcompat:appcompat:1.0.2'
     //https://github.com/zxing/zxing
     implementation 'com.google.zxing:core:3.3.3'
 }
