--- a/analysis_assistant_system/selector/build.gradle
+++ b/analysis_assistant_system/selector/build.gradle
@@ -1,12 +1,12 @@
 apply plugin: 'com.android.library'
 
 android {
-    compileSdkVersion 24
-    buildToolsVersion "23.0.3"
+    compileSdkVersion 29
+    buildToolsVersion "29.0.0"
 
     defaultConfig {
-        minSdkVersion 14
-        targetSdkVersion 24
+        minSdkVersion 19
+        targetSdkVersion 29
         versionCode 6
         versionName "1.1.4"
     }
@@ -19,5 +19,5 @@ android {
 }
 
 dependencies {
-    api 'com.android.support:appcompat-v7:24.2.1'
+    implementation 'androidx.appcompat:appcompat:1.0.2'
 }
