--- a/analysis_assistant_system/app/src/main/AndroidManifest.xml
+++ b/analysis_assistant_system/app/src/main/AndroidManifest.xml
@@ -89,6 +89,10 @@
             android:name=".MapActivity"
             android:screenOrientation="portrait">
         </activity>
+        <activity
+            android:name=".TestActivity"
+            android:screenOrientation="portrait">
+        </activity>
 
     </application>
 
