--- a/analysis_assistant_system/app/src/main/AndroidManifest.xml
+++ b/analysis_assistant_system/app/src/main/AndroidManifest.xml
@@ -24,6 +24,7 @@
         android:label="@string/app_name"
         android:theme="@style/AppTheme"
         tools:ignore="AllowBackup,GoogleAppIndexingWarning"
+        android:networkSecurityConfig="@xml/network_security_config"
         tools:targetApi="n">
 
         <meta-data
