--- a/analysis_assistant_system/app/src/main/AndroidManifest.xml
+++ b/analysis_assistant_system/app/src/main/AndroidManifest.xml
@@ -10,12 +10,8 @@
     <uses-permission android:name="android.permission.INTERNET"/>
     <uses-feature android:glEsVersion="0x00020000" android:required="true" />
 
-    <!--NFC 相关权限-->
-    <!--描述所需硬件特性-->
-    <uses-feature
-        android:name="android.hardware.nfc"
-        android:required="true" />
-    <uses-permission android:name="android.permission.NFC" />
+    <uses-feature android:name="android.hardware.nfc" android:required="true"/>
+    <uses-permission android:name="android.permission.NFC"/>
 
     <application
         android:name=".Application"
@@ -26,18 +22,6 @@
         tools:ignore="AllowBackup,GoogleAppIndexingWarning"
         android:networkSecurityConfig="@xml/network_security_config"
         tools:targetApi="n">
-
-        <meta-data
-            android:name="android.notch_support"
-            android:value="true"/>
-
-        <meta-data
-            android:name="android.max_aspect"
-            android:value="2.34"/>
-
-        <meta-data
-            android:name="notch.config"
-            android:value="portrait|landscape"/>
 
         <activity
             android:name=".MainActivity"
@@ -51,6 +35,16 @@
                 <action android:name="android.intent.action.MAIN"/>
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
+            <intent-filter>
+                <action android:name="android.nfc.action.NDEF_DISCOVERED"/>
+            </intent-filter>
+            <intent-filter>
+                <action android:name="android.nfc.action.TAG_DISCOVERED"/>
+            </intent-filter>
+            <intent-filter>
+                <action android:name="android.nfc.action.TECH_DISCOVERED"/>
+            </intent-filter>
+            <meta-data android:name="android.nfc.action.TECH_DISCOVERED" android:resource="@xml/nfc_tech_filter"/>
         </activity>
 
         <activity
@@ -76,6 +70,7 @@
 
         <activity
             android:name=".NfcActivity"
+            android:launchMode="singleTop"
             android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.nfc.action.NDEF_DISCOVERED" />
@@ -83,6 +78,16 @@
             </intent-filter>
             <intent-filter>
                 <action android:name="android.nfc.action.TECH_DISCOVERED"/>
+            </intent-filter>
+        </activity>
+
+        <activity
+            android:name=".TestReadNfcActivity"
+            android:launchMode="singleTop"
+            android:screenOrientation="portrait">
+            <intent-filter>
+                <action android:name="android.nfc.action.NDEF_DISCOVERED"/>
+                <category android:name="android.intent.category.DEFAULT"/>
             </intent-filter>
         </activity>
 
