--- a/analysis_assistant_system/app/src/main/AndroidManifest.xml
+++ b/analysis_assistant_system/app/src/main/AndroidManifest.xml
@@ -70,6 +70,16 @@
         </activity>
 
         <activity
+            android:name=".nfc.NfcActivity"
+            android:launchMode="singleTop"
+            android:screenOrientation="portrait">
+            <intent-filter>
+                <action android:name="android.nfc.action.NDEF_DISCOVERED"/>
+                <category android:name="android.intent.category.DEFAULT"/>
+            </intent-filter>
+        </activity>
+
+        <activity
             android:name=".TestReadNfcActivity"
             android:launchMode="singleTop"
             android:screenOrientation="portrait">
