update add change url

--- a/analysis_assistant_system/app/src/main/AndroidManifest.xml
+++ b/analysis_assistant_system/app/src/main/AndroidManifest.xml
@@ -38,7 +38,14 @@
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
-
+        <activity
+            android:name=".WelcomeActivity"
+            android:screenOrientation="portrait">
+        </activity>
+        <activity
+            android:name=".ChangeActivity"
+            android:screenOrientation="portrait">
+        </activity>
         <activity
             android:name=".LoginActivity"
             android:screenOrientation="portrait">
