update login  changeServer

--- a/analysis_assistant_system/app/build.gradle
+++ b/analysis_assistant_system/app/build.gradle
@@ -52,6 +52,7 @@ dependencies {
     implementation project(path: ':selector')
     implementation 'com.github.florent37:materialtextfield:1.0.7'
     implementation 'com.jzxiang.pickerview:TimePickerDialog:1.0.1'
+    implementation 'com.rengwuxian.materialedittext:library:2.1.4'
     //qrcode
     implementation 'com.sonnyjack.permission:PermissionUtils:0.1.0'
     implementation 'com.google.zxing:core:3.3.3'
